# university-db2

./: CMakeLists.txt  README.md  addresses.txt  db.cpp  db.hpp  employee.cpp  employee.hpp  generator.cpp  generator.hpp  main.cpp  menu.cpp  menu.hpp  nullPerson.cpp  nullPerson.hpp  person.cpp  person.hpp  student.cpp  student.hpp  surnames.txt  test.cpp
